Fix Credential Management API Store() for existing Credentials

This changes fixes the Credential Management API to correctly handle
storing of already existing credentials.

Bug: 795878
Change-Id: I269f465861f44cdd784f0ce077e755191d3bd7bd