chrome/browser/password_manager/credential_manager_browsertest.cc
@@ -324,6 +324,144 @@ IN_PROC_BROWSER_TEST_F(CredentialManagerBrowserTest,
 }
 
 IN_PROC_BROWSER_TEST_F(CredentialManagerBrowserTest,
+                       StoreExistingCredentialIsNoOp) {
+  scoped_refptr<password_manager::TestPasswordStore> password_store =
+      static_cast<password_manager::TestPasswordStore*>(
+          PasswordStoreFactory::GetForProfile(
+              browser()->profile(), ServiceAccessType::IMPLICIT_ACCESS)
+              .get());
+
+  GURL origin = embedded_test_server()->base_url();
+
+  autofill::PasswordForm form_1;
+  form_1.signon_realm = origin.spec();
+  form_1.username_value = base::ASCIIToUTF16("user1");
+  form_1.password_value = base::ASCIIToUTF16("abcdef");
+
+  autofill::PasswordForm form_2;
+  form_2.signon_realm = origin.spec();
+  form_2.username_value = base::ASCIIToUTF16("user2");
+  form_2.password_value = base::ASCIIToUTF16("123456");
+
+  password_store->AddLogin(form_1);
+  password_store->AddLogin(form_2);
+  WaitForPasswordStore();
+
+  // Check that the password store contains the values we expect.
+  {
+    auto found = password_store->stored_passwords().find(origin.spec());
+    ASSERT_NE(password_store->stored_passwords().end(), found);
+    const std::vector<autofill::PasswordForm>& passwords = found->second;
+
+    ASSERT_EQ(2U, passwords.size());
+    EXPECT_EQ(base::ASCIIToUTF16("user1"), passwords[0].username_value);
+    EXPECT_EQ(base::ASCIIToUTF16("abcdef"), passwords[0].password_value);
+    EXPECT_EQ(base::ASCIIToUTF16("user2"), passwords[1].username_value);
+    EXPECT_EQ(base::ASCIIToUTF16("123456"), passwords[1].password_value);
+  }
+
+  NavigateToFile("/password/simple_password.html");
+
+  // Call the API to and store 'user1' and 'user2' with the old passwords.
+  ASSERT_TRUE(content::ExecuteScript(
+      RenderViewHost(),
+      "navigator.credentials.store("
+      "  new PasswordCredential({ id: 'user1', password: 'abcdef' }))"
+      ".then(cred => navigator.credentials.store("
+      "  new PasswordCredential({ id: 'user2', password: '123456' })))"
+      ".then(cred => window.location = '/password/done.html');"));
+
+  NavigationObserver observer(WebContents());
+  observer.SetPathToWaitFor("/password/done.html");
+  observer.Wait();
+
+  // Wait for the password store to process the store request.
+  WaitForPasswordStore();
+
+  // Check that the password still store contains the values we expect.
+  {
+    auto found = password_store->stored_passwords().find(origin.spec());
+    ASSERT_NE(password_store->stored_passwords().end(), found);
+    const std::vector<autofill::PasswordForm>& passwords = found->second;
+
+    ASSERT_EQ(2U, passwords.size());
+    EXPECT_EQ(base::ASCIIToUTF16("user1"), passwords[0].username_value);
+    EXPECT_EQ(base::ASCIIToUTF16("abcdef"), passwords[0].password_value);
+    EXPECT_EQ(base::ASCIIToUTF16("user2"), passwords[1].username_value);
+    EXPECT_EQ(base::ASCIIToUTF16("123456"), passwords[1].password_value);
+  }
+}
+
+IN_PROC_BROWSER_TEST_F(CredentialManagerBrowserTest,
+                       StoreUpdatesPasswordOfExistingCredential) {
+  scoped_refptr<password_manager::TestPasswordStore> password_store =
+      static_cast<password_manager::TestPasswordStore*>(
+          PasswordStoreFactory::GetForProfile(
+              browser()->profile(), ServiceAccessType::IMPLICIT_ACCESS)
+              .get());
+
+  GURL origin = embedded_test_server()->base_url();
+
+  autofill::PasswordForm form_1;
+  form_1.signon_realm = origin.spec();
+  form_1.username_value = base::ASCIIToUTF16("user1");
+  form_1.password_value = base::ASCIIToUTF16("abcdef");
+
+  autofill::PasswordForm form_2;
+  form_2.signon_realm = origin.spec();
+  form_2.username_value = base::ASCIIToUTF16("user2");
+  form_2.password_value = base::ASCIIToUTF16("123456");
+
+  password_store->AddLogin(form_1);
+  password_store->AddLogin(form_2);
+  WaitForPasswordStore();
+
+  // Check that the password store contains the values we expect.
+  {
+    auto found = password_store->stored_passwords().find(origin.spec());
+    ASSERT_NE(password_store->stored_passwords().end(), found);
+    const std::vector<autofill::PasswordForm>& passwords = found->second;
+
+    ASSERT_EQ(2U, passwords.size());
+    EXPECT_EQ(base::ASCIIToUTF16("user1"), passwords[0].username_value);
+    EXPECT_EQ(base::ASCIIToUTF16("abcdef"), passwords[0].password_value);
+    EXPECT_EQ(base::ASCIIToUTF16("user2"), passwords[1].username_value);
+    EXPECT_EQ(base::ASCIIToUTF16("123456"), passwords[1].password_value);
+  }
+
+  NavigateToFile("/password/simple_password.html");
+
+  // Call the API to and store 'user1' and 'user2' with a new password.
+  ASSERT_TRUE(content::ExecuteScript(
+      RenderViewHost(),
+      "navigator.credentials.store("
+      "  new PasswordCredential({ id: 'user1', password: 'abcdefg' }))"
+      ".then(cred => navigator.credentials.store("
+      "  new PasswordCredential({ id: 'user2', password: '1234567' })))"
+      ".then(cred => window.location = '/password/done.html');"));
+
+  NavigationObserver observer(WebContents());
+  observer.SetPathToWaitFor("/password/done.html");
+  observer.Wait();
+
+  // Wait for the password store to process the store request.
+  WaitForPasswordStore();
+
+  // Check that the password store contains the values we expect.
+  {
+    auto found = password_store->stored_passwords().find(origin.spec());
+    ASSERT_NE(password_store->stored_passwords().end(), found);
+    const std::vector<autofill::PasswordForm>& passwords = found->second;
+
+    ASSERT_EQ(2U, passwords.size());
+    EXPECT_EQ(base::ASCIIToUTF16("user1"), passwords[0].username_value);
+    EXPECT_EQ(base::ASCIIToUTF16("abcdefg"), passwords[0].password_value);
+    EXPECT_EQ(base::ASCIIToUTF16("user2"), passwords[1].username_value);
+    EXPECT_EQ(base::ASCIIToUTF16("1234567"), passwords[1].password_value);
+  }
+}
+
+IN_PROC_BROWSER_TEST_F(CredentialManagerBrowserTest,
                        StoreSavesPSLMatchedCredential) {
   scoped_refptr<password_manager::TestPasswordStore> password_store =
       static_cast<password_manager::TestPasswordStore*>(
